shopcloud-manifests/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopcloud-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopcloud-backend
  template:
    metadata:
      labels:
        app: shopcloud-backend
    spec:
      containers:
        - name: shopcloud-backend
          image: shopcloud-backend:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
