shopcloud-manifests/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopcloud-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopcloud-frontend
  template:
    metadata:
      labels:
        app: shopcloud-frontend
    spec:
      containers:
        - name: shopcloud-frontend
          image: shopcloud-frontend:latest
          ports:
            - containerPort: 4173
          readinessProbe:
            httpGet:
              path: /
              port: 4173
            initialDelaySeconds: 10
            periodSeconds: 15
