shopcloud-manifests/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopcloud-backend
spec:
  selector:
    app: shopcloud-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
